syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hnvas.grpctracingdemo.grpc";

service ExampleApi {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloError (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}